	* Fixed an issue with Index Queue initialization of mount pages
	* Fixed handling of multivalue fields in template output, they are detected and converted into serialized arrays automatically now
	* Fixed issue #34435: Failed items in Index Queue stop whole indexing process

2012-02-23  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v2.0.0

2012-02-21  Ingo Renner  <ingo.renner@dkd.de>

	* Added stdWrap for facet names and sorting option labels

2012-02-20  Ingo Renner  <ingo.renner@dkd.de>

	* Changed the shebang line of the install script to use the environment instead of assuming a specific location for bash

2012-02-17  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug #34038: Realurls not resolved when index queue runs from cli on single site install, credits Michiel Roos
	* Added a User Agent header for Index Queue page indexer requests
	* Fixed an issue where records where added to the Index Queue from trees without configured root page

2012-02-16  Ingo Renner  <ingo.renner@dkd.de>

	!!! Renamed tx_solr_ConnectionManager::getAllConnectionConfigurations() to getAllConfigurations()

	* Added tx_solr_ConnectionManager::getConfigurationsBySite()
	* Added tx_solr_ConnectionManager::getConfigurationByPageId() and tx_solr_ConnectionManager::getConfigurationByRootPageId()
	* Fixed an issue where Solr connections where not detected correctly when indexing translated mounted pages

2012-02-15  Ingo Renner  <ingo.renner@dkd.de>

	* Added a class to generate and check API keys for use with the REST API
	* Added an API key check for the REST API

2012-02-14  Ingo Renner  <ingo.renner@dkd.de>

	!!! Changed plugin.tx_solr.templateFile to plugin.tx_solr.templateFiles - notice the S at the end
	!!! Changed interface tx_solr_PluginCommand to expect an instance of tx_solr_pluginbase_CommandPluginBase as the parent plugin instead of tslib_pibase
	!!! Updated jQuery to v1.7.1, updated jQuery UI to v1.8.16, separated jQuery UI components, restructured javascript resources