@@ -5,6 +5,7 @@
 	* Fixed an issue with Index Queue initialization of mount pages
 	* Fixed handling of multivalue fields in template output, they are detected and converted into serialized arrays automatically now
 	* Fixed issue #34435: Failed items in Index Queue stop whole indexing process
+	* Improved logging of failures during page indexing
 
 2012-02-23  Ingo Renner  <ingo.renner@dkd.de>
 
